[package]
name = "kit"
version = "0.0.1"
description = "kit"
authors = ["zhangzhankui <zzk13180@gmail.com>"]
license = "MIT"
repository = "https://github.com/zzk13180/kit"
default-run = "kit"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
tauri = { version = "1.5.1", features = ["api-all"] }
common = { path = "../common", package = "zzk13180_kit_common" }
robot = { path = "../robot", package = "zzk13180_kit_robot" }
storage = { path = "../storage", package = "zzk13180_kit_storage" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
